--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-js": "^4.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsonata": "^2.0.3",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6",
     "underscore": "^1.13.6"
