--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonata": "^2.0.3",
+    "mathjs": "^11.11.2",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6",
     "underscore": "^1.13.6"
