--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.2",
     "jsonata": "^2.0.3",
     "mathjs": "^11.11.2",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6",
     "underscore": "^1.13.6"
