--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "crypto-js": "^4.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonata": "^2.0.3",
     "mathjs": "^11.11.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "save": "^2.9.0",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6",
     "underscore": "^1.13.6"
